[gd_scene load_steps=5 format=2]

[ext_resource path="res://Planets/Planet.gd" type="Script" id=1]
[ext_resource path="res://Objects/Button.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
resource_local_to_scene = true
radius = 93.8638

[sub_resource type="CircleShape2D" id=2]

[node name="Planet" type="StaticBody2D" groups=[
"Planets",
]]
position = Vector2( 0, -0.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="GravityCenter" type="Position2D" parent="."]

[node name="Button" parent="." instance=ExtResource( 3 )]
position = Vector2( 87, -47 )
rotation = 1.08595

[node name="GravityArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="GravityCollision" type="CollisionShape2D" parent="GravityArea"]
shape = SubResource( 2 )
